# vr-datalake-lane-geometry

./: .dockerignore  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
.github/workflows/: tests.yml
src/lane_geometry/: config.py  job.py  main.py
src/lane_geometry/bigquery/: queries.py  reader.py  writer.py
src/lane_geometry/configs/: curvature_thresholds.yaml
src/lane_geometry/curvature/: classifier.py  fitting.py  models.py  normalizer.py  thresholds.py
src/lane_geometry/datasets/: base.py
src/lane_geometry/datasets/public/: culane.py  curvelanes.py  registry.py
src/lane_geometry/datasets/user/: registry.py
src/lane_geometry/gcs/: paths.py  reader.py  uris.py
src/lane_geometry/parsers/: base.py  culane.py  curvelanes.py  public.py
tests/: test_job.py  test_paths.py
tests/bigquery/: test_reader.py  test_writer.py
tests/curvature/: test_classifier.py  test_fitting.py  test_thresholds.py
tests/datasets/: test_culane.py  test_curvelanes.py
